Added reveal button